--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -84,8 +84,8 @@ body {
 #gameover {
 	position: absolute;
 	top: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+    height: 100vh;
 	background: #00416A;
 	color: #fff;
 	display: none;
@@ -93,8 +93,10 @@ body {
 	align-items: center;
 	font-size: 3.13rem;
 	flex-direction: column;
-
+text-align: center;
 }
+
+
 
 #restart {
 	padding: 20px;
@@ -106,6 +108,13 @@ body {
 	font-family: 'Righteous', cursive;
 	background-color: #D98E04;
 
+}
+
+.timer{
+	position: absolute;
+	right: 1rem;
+	top: 1rem;
+	color: #fff;
 }
 
 .homeScreen {
