--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -142,7 +142,7 @@ text-align: center;
 	margin-top: 2rem;
 }
 
-.selcPlay {
+.selectPlayers .play {
 	padding: 20px;
 	font-size: 1.3rem;
 	margin-top: 10px;
@@ -151,6 +151,13 @@ text-align: center;
 	color: #fff;
 	font-family: 'Righteous', cursive;
 	background-color: #D98E04;
+	transition: transform 300ms linear;
+}
+
+
+
+.selectPlayers .play:hover{
+	transform: translate(0px, 0px) scale(1.3, 1.3);
 }
 
 @media(max-width: 768px) {
