--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,14 +6,16 @@
 
 body {
 	font-family: 'Righteous', cursive;
+	flex-direction: column;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 95vh;
 	background: #00416A;
 	overflow: hidden;
 	position: relative;
+	padding: 10px;
 
 }
 
@@ -84,8 +86,8 @@ body {
 #gameover {
 	position: absolute;
 	top: 0;
-	width: 100vw;
-    height: 100vh;
+	width: 96%;
+	height: 100%;
 	background: #00416A;
 	color: #fff;
 	display: none;
@@ -93,7 +95,7 @@ body {
 	align-items: center;
 	font-size: 3.13rem;
 	flex-direction: column;
-text-align: center;
+	text-align: center;
 }
 
 
@@ -110,7 +112,7 @@ text-align: center;
 
 }
 
-.timer{
+.timer {
 	position: absolute;
 	right: 1rem;
 	top: 1rem;
@@ -120,7 +122,7 @@ text-align: center;
 .homeScreen {
 	color: #fff;
 	max-width: 655px;
-	grid-area: 2 / 2 / 3 / 5;
+	grid-area: 2 / 2 / 5 / 5;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -155,10 +157,21 @@ text-align: center;
 	transition: transform 300ms linear;
 }
 
-
-
-.selectPlayers .play:hover{
+.selectPlayers .play:hover {
 	transform: translate(0px, 0px) scale(1.3, 1.3);
+}
+
+footer {
+	width: 100%;
+	margin-top: -35%;
+	padding: 10px;
+	position: absolute;
+	bottom: 0;
+}
+
+a img {
+	width: 3%;
+	float: left;
 }
 
 @media(max-width: 768px) {
@@ -193,13 +206,10 @@ text-align: center;
 
 @media(max-width: 435px) {
 
-	body {
-		padding: 10px;
-	}
 
 	.card {
-		width: 80px;
-		height: 80px;
+		width: 85px;
+		height: 85px;
 
 	}
 
@@ -209,7 +219,8 @@ text-align: center;
 		grid-template-rows: repeat(5, 1fr);
 		grid-column-gap: 8px;
 		grid-row-gap: 8px;
-		margin-top: 26%;
+		margin-top: -26%;
+
 
 	}
 
@@ -228,10 +239,20 @@ text-align: center;
 
 	.homeScreen {
 		padding: 8px;
-		grid-area: 2 / 1 / 1 / 5;
+		grid-area: 2 / 1 / 4 / 5;
 		margin-top: 30%;
 
 
+	}
+
+	a img {
+		width: 10%;
+		float: left;
+	}
+
+	footer {
+
+		bottom: 10px;
 	}
 }
 
